Refactoring, removing classes that were not needed and optimizing the state class